begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/*  * Copyright 2010 The Apache Software Foundation  *  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|rest
operator|.
name|model
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|StringReader
import|;
end_import

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|StringWriter
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|Iterator
import|;
end_import

begin_import
import|import
name|javax
operator|.
name|xml
operator|.
name|bind
operator|.
name|JAXBContext
import|;
end_import

begin_import
import|import
name|javax
operator|.
name|xml
operator|.
name|bind
operator|.
name|JAXBException
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|SmallTests
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|util
operator|.
name|Base64
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|util
operator|.
name|Bytes
import|;
end_import

begin_import
import|import
name|junit
operator|.
name|framework
operator|.
name|TestCase
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|experimental
operator|.
name|categories
operator|.
name|Category
import|;
end_import

begin_class
annotation|@
name|Category
argument_list|(
name|SmallTests
operator|.
name|class
argument_list|)
specifier|public
class|class
name|TestStorageClusterStatusModel
extends|extends
name|TestCase
block|{
specifier|private
specifier|static
specifier|final
name|String
name|AS_XML
init|=
literal|"<ClusterStatus requests=\"0\" regions=\"2\" averageLoad=\"1.0\">"
operator|+
literal|"<DeadNodes/>"
operator|+
literal|"<LiveNodes><Node startCode=\"1245219839331\" requests=\"0\""
operator|+
literal|" name=\"test1\" maxHeapSizeMB=\"1024\" heapSizeMB=\"128\">"
operator|+
literal|"<Region stores=\"1\" storefiles=\"1\" storefileSizeMB=\"0\""
operator|+
literal|" storefileIndexSizeMB=\"0\" name=\"LVJPT1QtLCww\""
operator|+
literal|" memstoreSizeMB=\"0\"/></Node>"
operator|+
literal|"<Node startCode=\"1245239331198\" requests=\"0\" name=\"test2\""
operator|+
literal|" maxHeapSizeMB=\"1024\" heapSizeMB=\"512\">"
operator|+
literal|"<Region stores=\"1\" storefiles=\"1\" storefileSizeMB=\"0\""
operator|+
literal|" storefileIndexSizeMB=\"0\" name=\"Lk1FVEEuLCwxMjQ2MDAwMDQzNzI0\""
operator|+
literal|" memstoreSizeMB=\"0\"/></Node>"
operator|+
literal|"</LiveNodes></ClusterStatus>"
decl_stmt|;
specifier|private
specifier|static
specifier|final
name|String
name|AS_PB
init|=
literal|"Ci0KBXRlc3QxEOO6i+eeJBgAIIABKIAIMhUKCS1ST09ULSwsMBABGAEgACgAMAAKOQoFdGVzdDIQ"
operator|+
literal|"/pKx8J4kGAAggAQogAgyIQoVLk1FVEEuLCwxMjQ2MDAwMDQzNzI0EAEYASAAKAAwABgCIAApAAAA"
operator|+
literal|"AAAA8D8="
decl_stmt|;
specifier|private
name|JAXBContext
name|context
decl_stmt|;
specifier|public
name|TestStorageClusterStatusModel
parameter_list|()
throws|throws
name|JAXBException
block|{
name|super
argument_list|()
expr_stmt|;
name|context
operator|=
name|JAXBContext
operator|.
name|newInstance
argument_list|(
name|StorageClusterStatusModel
operator|.
name|class
argument_list|)
expr_stmt|;
block|}
specifier|private
name|StorageClusterStatusModel
name|buildTestModel
parameter_list|()
block|{
name|StorageClusterStatusModel
name|model
init|=
operator|new
name|StorageClusterStatusModel
argument_list|()
decl_stmt|;
name|model
operator|.
name|setRegions
argument_list|(
literal|2
argument_list|)
expr_stmt|;
name|model
operator|.
name|setRequests
argument_list|(
literal|0
argument_list|)
expr_stmt|;
name|model
operator|.
name|setAverageLoad
argument_list|(
literal|1.0
argument_list|)
expr_stmt|;
name|model
operator|.
name|addLiveNode
argument_list|(
literal|"test1"
argument_list|,
literal|1245219839331L
argument_list|,
literal|128
argument_list|,
literal|1024
argument_list|)
operator|.
name|addRegion
argument_list|(
name|Bytes
operator|.
name|toBytes
argument_list|(
literal|"-ROOT-,,0"
argument_list|)
argument_list|,
literal|1
argument_list|,
literal|1
argument_list|,
literal|0
argument_list|,
literal|0
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|model
operator|.
name|addLiveNode
argument_list|(
literal|"test2"
argument_list|,
literal|1245239331198L
argument_list|,
literal|512
argument_list|,
literal|1024
argument_list|)
operator|.
name|addRegion
argument_list|(
name|Bytes
operator|.
name|toBytes
argument_list|(
literal|".META.,,1246000043724"
argument_list|)
argument_list|,
literal|1
argument_list|,
literal|1
argument_list|,
literal|0
argument_list|,
literal|0
argument_list|,
literal|0
argument_list|)
expr_stmt|;
return|return
name|model
return|;
block|}
annotation|@
name|SuppressWarnings
argument_list|(
literal|"unused"
argument_list|)
specifier|private
name|String
name|toXML
parameter_list|(
name|StorageClusterStatusModel
name|model
parameter_list|)
throws|throws
name|JAXBException
block|{
name|StringWriter
name|writer
init|=
operator|new
name|StringWriter
argument_list|()
decl_stmt|;
name|context
operator|.
name|createMarshaller
argument_list|()
operator|.
name|marshal
argument_list|(
name|model
argument_list|,
name|writer
argument_list|)
expr_stmt|;
return|return
name|writer
operator|.
name|toString
argument_list|()
return|;
block|}
specifier|private
name|StorageClusterStatusModel
name|fromXML
parameter_list|(
name|String
name|xml
parameter_list|)
throws|throws
name|JAXBException
block|{
return|return
operator|(
name|StorageClusterStatusModel
operator|)
name|context
operator|.
name|createUnmarshaller
argument_list|()
operator|.
name|unmarshal
argument_list|(
operator|new
name|StringReader
argument_list|(
name|xml
argument_list|)
argument_list|)
return|;
block|}
annotation|@
name|SuppressWarnings
argument_list|(
literal|"unused"
argument_list|)
specifier|private
name|byte
index|[]
name|toPB
parameter_list|(
name|StorageClusterStatusModel
name|model
parameter_list|)
block|{
return|return
name|model
operator|.
name|createProtobufOutput
argument_list|()
return|;
block|}
specifier|private
name|StorageClusterStatusModel
name|fromPB
parameter_list|(
name|String
name|pb
parameter_list|)
throws|throws
name|IOException
block|{
return|return
operator|(
name|StorageClusterStatusModel
operator|)
operator|new
name|StorageClusterStatusModel
argument_list|()
operator|.
name|getObjectFromMessage
argument_list|(
name|Base64
operator|.
name|decode
argument_list|(
name|AS_PB
argument_list|)
argument_list|)
return|;
block|}
specifier|private
name|void
name|checkModel
parameter_list|(
name|StorageClusterStatusModel
name|model
parameter_list|)
block|{
name|assertEquals
argument_list|(
name|model
operator|.
name|getRegions
argument_list|()
argument_list|,
literal|2
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|model
operator|.
name|getRequests
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|model
operator|.
name|getAverageLoad
argument_list|()
argument_list|,
literal|1.0
argument_list|)
expr_stmt|;
name|Iterator
argument_list|<
name|StorageClusterStatusModel
operator|.
name|Node
argument_list|>
name|nodes
init|=
name|model
operator|.
name|getLiveNodes
argument_list|()
operator|.
name|iterator
argument_list|()
decl_stmt|;
name|StorageClusterStatusModel
operator|.
name|Node
name|node
init|=
name|nodes
operator|.
name|next
argument_list|()
decl_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getName
argument_list|()
argument_list|,
literal|"test1"
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getStartCode
argument_list|()
argument_list|,
literal|1245219839331L
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getHeapSizeMB
argument_list|()
argument_list|,
literal|128
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getMaxHeapSizeMB
argument_list|()
argument_list|,
literal|1024
argument_list|)
expr_stmt|;
name|Iterator
argument_list|<
name|StorageClusterStatusModel
operator|.
name|Node
operator|.
name|Region
argument_list|>
name|regions
init|=
name|node
operator|.
name|getRegions
argument_list|()
operator|.
name|iterator
argument_list|()
decl_stmt|;
name|StorageClusterStatusModel
operator|.
name|Node
operator|.
name|Region
name|region
init|=
name|regions
operator|.
name|next
argument_list|()
decl_stmt|;
name|assertTrue
argument_list|(
name|Bytes
operator|.
name|toString
argument_list|(
name|region
operator|.
name|getName
argument_list|()
argument_list|)
operator|.
name|equals
argument_list|(
literal|"-ROOT-,,0"
argument_list|)
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStores
argument_list|()
argument_list|,
literal|1
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStorefiles
argument_list|()
argument_list|,
literal|1
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStorefileSizeMB
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getMemstoreSizeMB
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStorefileIndexSizeMB
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertFalse
argument_list|(
name|regions
operator|.
name|hasNext
argument_list|()
argument_list|)
expr_stmt|;
name|node
operator|=
name|nodes
operator|.
name|next
argument_list|()
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getName
argument_list|()
argument_list|,
literal|"test2"
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getStartCode
argument_list|()
argument_list|,
literal|1245239331198L
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getHeapSizeMB
argument_list|()
argument_list|,
literal|512
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|node
operator|.
name|getMaxHeapSizeMB
argument_list|()
argument_list|,
literal|1024
argument_list|)
expr_stmt|;
name|regions
operator|=
name|node
operator|.
name|getRegions
argument_list|()
operator|.
name|iterator
argument_list|()
expr_stmt|;
name|region
operator|=
name|regions
operator|.
name|next
argument_list|()
expr_stmt|;
name|assertEquals
argument_list|(
name|Bytes
operator|.
name|toString
argument_list|(
name|region
operator|.
name|getName
argument_list|()
argument_list|)
argument_list|,
literal|".META.,,1246000043724"
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStores
argument_list|()
argument_list|,
literal|1
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStorefiles
argument_list|()
argument_list|,
literal|1
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStorefileSizeMB
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getMemstoreSizeMB
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertEquals
argument_list|(
name|region
operator|.
name|getStorefileIndexSizeMB
argument_list|()
argument_list|,
literal|0
argument_list|)
expr_stmt|;
name|assertFalse
argument_list|(
name|regions
operator|.
name|hasNext
argument_list|()
argument_list|)
expr_stmt|;
name|assertFalse
argument_list|(
name|nodes
operator|.
name|hasNext
argument_list|()
argument_list|)
expr_stmt|;
block|}
specifier|public
name|void
name|testBuildModel
parameter_list|()
throws|throws
name|Exception
block|{
name|checkModel
argument_list|(
name|buildTestModel
argument_list|()
argument_list|)
expr_stmt|;
block|}
specifier|public
name|void
name|testFromXML
parameter_list|()
throws|throws
name|Exception
block|{
name|checkModel
argument_list|(
name|fromXML
argument_list|(
name|AS_XML
argument_list|)
argument_list|)
expr_stmt|;
block|}
specifier|public
name|void
name|testFromPB
parameter_list|()
throws|throws
name|Exception
block|{
name|checkModel
argument_list|(
name|fromPB
argument_list|(
name|AS_PB
argument_list|)
argument_list|)
expr_stmt|;
block|}
block|}
end_class

end_unit

